# FileTransfer

./: CMakeLists.txt  FileTransfer.sln  README.md
.github/workflows/: cmake.yml
Client/: Client.vcxproj  Client.vcxproj.filters  client.cpp  client.h  main.cpp
Common/: logger.cpp  logger.h
Server/: Server.vcxproj  Server.vcxproj.filters  main.cpp  server.cpp  server.h
